# langgraph-memento

./: pyproject.toml
frontend/: streamlit.py
memento/: env.py  graph.py  main.py  tools.py
memento/agent/: graph.py  tools.py
memento/databases/: pg.py  vector.py
memento/embeddings/: ollama_embeddings.py
memento/prompts/: memento.md  prompts.py  scout.md
